--- a/app/views/lifts/index.html.erb
+++ b/app/views/lifts/index.html.erb
@@ -1,4 +1,5 @@
-<h1>lifts#index</h1>
+<h1>lifts#index coffee or not?</h1>
 
-<%= react_component 'Lifts', { data: @lifts} %>
+<%= react_component 'Lifts', { data: @lifts } %>
+<%# = react_component 'Lifts', {data: @lifts} %>
 <p>Time to rock it</p>
